--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@
                     <div style="font-size: 1.8em; margin-bottom: 15px;">👨‍⚖️🤖📖</div>
                     <p><strong>Sobre el uso de IA por jueces de la República</strong></p>
                     <p>Esta sentencia establece precedentes fundamentales sobre cómo los jueces pueden y deben utilizar herramientas de inteligencia artificial en el ejercicio de sus funciones jurisdiccionales, marcando un hito en la jurisprudencia nacional sobre tecnología y justicia.</p>
+                    <p>La Sentencia T-323 de 2024 de la Corte Constitucional de Colombia constituye el primer pronunciamiento sobre el uso de la inteligencia artificial en la administración de justicia. En ella, la Corte establece que la IA no puede sustituir al juez y advierte sobre riesgos como las alucinaciones, los sesgos discriminatorios y la vulneración de la privacidad. Asimismo, fija criterios éticos fundamentales: transparencia, responsabilidad, control humano, no discriminación, necesidad de regulación y capacitación, además de la publicación de directrices claras. Este fallo marca un hito en el ámbito jurídico, ya que fija límites al manejo de la IA, abre el debate sobre su regulación y fortalece la protección de los derechos fundamentales, garantizando el debido proceso y la autonomía judicial, pilares esenciales en un Estado social de derecho.</p>
                     <div style="font-size: 1.3em; margin-top: 15px;">📊⚡🎯</div>
                 </div>
                 <p>📋 <strong>Marco regulatorio para la implementación responsable de IA en el sistema judicial colombiano</strong></p>
@@ -679,7 +680,7 @@
                     <div class="conclusion-card">
                         <div style="font-size: 1.8em; margin-bottom: 10px;">👩‍💼🛡️</div>
                         <h4>Madeleyn 🌟</h4>
-                        <p>"La IA ofrece oportunidades extraordinarias para mejorar la sociedad, pero exige regulación cuidadosa y salvaguardias robustas que garanticen la protección de los derechos fundamentales en el entorno digital."</p>
+                        <p>"La IA ofrece oportunidades, pero exige regulación y salvaguardias que garanticen la protección de los derechos fundamentales en el entorno digital."</p>
                         <div style="font-size: 1.3em; text-align: center; margin-top: 10px;">🚀🛡️💻</div>
                     </div>
                     <div class="conclusion-card">
